Bug 125461 - Start Center: Some file previews are black ( ie. xlsx files ) (gen/gtk2)
Summary: Start Center: Some file previews are black ( ie. xlsx files ) (gen/gtk2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
: 125865 126791 126846 127327 128292 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2019-05-23 13:33 UTC by Xisco Faulí
Modified: 2023-07-19 16:37 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (10.05 KB, image/png)
2019-05-23 13:33 UTC, Xisco Faulí
Details
Recently Used thumbnails and Help > About are black (67.45 KB, image/png)
2019-08-15 03:33 UTC, russell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-05-23 13:33:25 UTC
Created attachment 151627 [details]
screenshot

Steps to reproduce:
1. Open an existing ddbb
2. Close it

-> File preview has a black contour. See attached screenshot

Reproduced in

Version: 6.3.0.0.alpha1+
Build ID: e3015d7021e689c71c2ed8e5dd01a74d832c84f0
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-05-23 13:34:34 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=86ea64f216819696cd86d1926aff0a138ace2baf

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2019-02-15 13:14:32 +0100
committer	Tomaž Vajngerl <quikee@gmail.com>	2019-04-03 11:57:08 +0200
commit 86ea64f216819696cd86d1926aff0a138ace2baf (patch)
tree db513803abc9dc255d27c0f08cba6d6d0c9ef1d9
parent 994b41a6c69d20637dcb95894c385f5c0102d600 (diff)
Support for native 32bit Bitmap in VCL and SVP (cairo) backend

Bisected with: bibisect-linux64-6.3

Adding Cc: to Tomaž Vajngerl
Comment 2 Xisco Faulí 2019-06-13 13:31:13 UTC
*** Bug 125865 has been marked as a duplicate of this bug. ***
Comment 3 Heiko Tietze 2019-08-12 15:30:53 UTC
*** Bug 126791 has been marked as a duplicate of this bug. ***
Comment 4 russell 2019-08-15 03:33:57 UTC
Created attachment 153400 [details]
Recently Used thumbnails and Help > About are black

Existing Recently Used thumbnails created by 6.2.4 are displaced ok. But if I select one with 6.3.0, close libreoffice and reopen, the thumbnail is now black.

Help > About is also black.  Please see image.

When I start libreoffice from the command line I see:

===> /opt/libreoffice6.3/program/soffice --nologo

/opt/libreoffice6.3/program/soffice.bin: /lib/x86_64-linux-gnu/libdbus-1.so.3: no version information available (required by /opt/libreoffice6.3/program/libmergedlo.so)

** (process:5016): WARNING **: require gtk >= 3.18 for theme expectations

(soffice:5016): Gdk-WARNING **: gdk_window_set_icon_list: icons too large

(soffice:5016): Gdk-WARNING **: gdk_window_set_icon_list: icons too large

From this link, https://www.libreoffice.org/get-help/system-requirements/, it appears this machine meets requirements.

Linux kernel: 4.4
glibc2: 2.19
Pentium-compatible PC: yes
256Mb RAM (512 MB RAM recommended): yes
Up to 1.55 GB available hard disk space: yes
X Server with 1024x768 resolution, with at least 256 colors: yes
Gnome 2.16 or higher, with the gail 1.8.6 and at-spi 1.7 packages: kde 4.14, gail 2.24, at-spi 2.10
Comment 5 Xisco Faulí 2019-09-05 11:33:49 UTC
*** Bug 127327 has been marked as a duplicate of this bug. ***
Comment 6 Caolán McNamara 2019-09-05 14:19:23 UTC
subbisected to the bmpacc2.cxx changes. I gues the problem is the 32bit images we get back from X in XGetImage where we probably should be ignoring the "alpha" channel of that.
Comment 7 Caolán McNamara 2019-09-05 16:28:40 UTC
I think Ive got something simple enough to be confident of backporting without risking bustage
Comment 8 Commit Notification 2019-09-06 08:09:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/966a51dfc63e2a783282dfd0379bf5c987b1e136%5E%21

Resolves: tdf#125461 32bit XImage is not premultiplied

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Timur Davletshin 2019-09-09 14:15:26 UTC
(In reply to Commit Notification from comment #8)
> Caolán McNamara committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/+/
> 966a51dfc63e2a783282dfd0379bf5c987b1e136%5E%21
> 
> Resolves: tdf#125461 32bit XImage is not premultiplied
> 
> It will be available in 6.4.0.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Why 6.4 and not in 6.3.2? Are we going to have broken functionality in whole 6.3.x branch?
Comment 10 Caolán McNamara 2019-09-09 14:46:24 UTC
Its proposed for 6-3 as https://gerrit.libreoffice.org/#/c/78666/

Though I think there are two related bugs bundled together here now that we may need to disentangle. My fixes will solve the cases that something ended up entirely black, not the case of back "border"
Comment 11 Xisco Faulí 2019-09-09 23:29:42 UTC
(In reply to Caolán McNamara from comment #10)
> Its proposed for 6-3 as https://gerrit.libreoffice.org/#/c/78666/
> 
> Though I think there are two related bugs bundled together here now that we
> may need to disentangle. My fixes will solve the cases that something ended
> up entirely black, not the case of back "border"

Indeed, there are two related issue. The one you fixed ( bug 126791 ) and the black border originally described here. Let's get the summary updated and I'll create a follow-up bug...

Issue verified in

Version: 6.4.0.0.alpha0+
Build ID: f4f8bccbd4e2c3979a83d5b2f49e16a99a3a2016
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 12 Xisco Faulí 2019-09-09 23:31:01 UTC
*** Bug 126791 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2019-09-17 10:23:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/09470e24332f6216900419cc1e76421992ae6b73%5E%21

Resolves: tdf#125461 32bit XImage is not premultiplied

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2019-10-21 11:33:03 UTC
*** Bug 128292 has been marked as a duplicate of this bug. ***
Comment 15 stragu 2023-07-19 16:37:04 UTC
*** Bug 126846 has been marked as a duplicate of this bug. ***