Resolves: tdf#125461 32bit XImage is not premultiplied

regressions since...

commit 86ea64f216819696cd86d1926aff0a138ace2baf
Date:   Fri Feb 15 13:14:32 2019 +0100

    Support for native 32bit Bitmap in VCL and SVP (cairo) backend

32bit cairo data is premultiplied with alpha but not so 32bit XImages which
don't have alpha at all, so restore the pre-change 32bit accessors, which
effectively ignore their alpha channel, beside the post-change ones and
toggle which one to use depending on the back end capability

Change-Id: Ibfec18b4ddb6e93ab19e44e7127e7a16982e2f49
Reviewed-on: https://gerrit.libreoffice.org/78666
Tested-by: Jenkins
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>